Init mock for integration test